--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-/home/ec2-user/minikube-latest.aarch64.rpm
-/home/ec2-user/quickInstaller/minikube-latest.x86_64.rpm
+minikube-latest.aarch64.rpm
+minikube-latest.x86_64.rpm
